Adjust collections grid layout

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,6 +1,6 @@
-<ul class="l-row projects">
+<ul class="projects">
 {% for item in site.data.projects %}
-  <li class="l-cell projects__item">
+  <li class="projects__item">
     <div class="block-link">
       <div class="projects__description">
         <img class="projects__thumbnail" src="/assets/images/portfolio/{{item.image}}" alt="" />
