--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -17,7 +17,7 @@ layout: default
   </div>
 
   <div class="l-constrained">
-    <div class="l-row articles">
+    <div class="articles">
     {% if page.pagetype == 'category' %}
       {% assign items = site.categories[page.category] %}
     {% else %}
@@ -25,7 +25,7 @@ layout: default
     {% endif %}
 
     {% for post in items %}
-      <div class="l-cell articles__item">
+      <div class="articles__item">
         {% include article.html %}
       </div>
     {% endfor %}
