--- a/_sass/components/modules/_projects.scss
+++ b/_sass/components/modules/_projects.scss
@@ -85,22 +85,11 @@
   }
 
   // Image
-  &__thumbnail {
-    float: left;
-    margin: 0 10px 0 0;
-    max-width: 45%;
-
-    @include respond-to($breakpoint-small) {
-      float: none;
-      margin: 0;
-      max-width: none;
-      width: 100%;
-    }
-  }
+  &__thumbnail {}
 
   // Project title
   &__heading {
-    margin: 0 10px 0 0;
+    margin: 0 10px;
     padding: 10px 0 0;
     text-transform: uppercase;
 
@@ -109,7 +98,6 @@
     }
 
     @include respond-to($breakpoint-small) {
-      margin: 0 10px;
       padding: 0;
     }
   }
