--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -8,12 +8,12 @@ layout: default
     <div class="l-constrained">
       <h1 class="p-name entry-title">{{page.title}}</h1>
     </div>
-    {% if page.url != '/work/' and page.url != '/about/' and page.url != '/styleguide/' %}
+    {% if page.url != '/work/' and page.url != '/about/' and page.url != '/styleguide/' and page.url != '/offline/' %}
     {% include post-meta-in-single.html time=page.date %}
     {% endif %}
   </div>
   <div class="e-content e-content--single entry-content l-constrained">
-    {% if page.url != '/work/' and page.url != '/about/' and page.url != '/styleguide/' %}
+    {% if page.url != '/work/' and page.url != '/about/' and page.url != '/styleguide/' and page.url != '/offline/' %}
     <div class="l-row">
       <div class="l-cell {% if page.url != '/work/' %}l-cell-8{% endif %}">
         {{content}}
