--- a/_sass/components/modules/_article.scss
+++ b/_sass/components/modules/_article.scss
@@ -2,12 +2,15 @@
    @group Article
    ========================================================================== */
 
+@import "../../mixins/cover-absolutely";
+
 // Article wrapper
 .h-entry {
   &--in-collection {
     background: #fff;
     padding: 5px 15px;
     overflow: hidden;
+    position: relative;
 
     display: flex;
     flex-direction: column;
@@ -26,7 +29,7 @@
     transition: box-shadow $transition-duration linear;
 
     &:hover {
-      box-shadow: 0 2px 4px 0 hsla(0,0%,68%,.32);
+      box-shadow: 0 1px 2px rgba(0, 0, 0, .07);
     }
   }
 }
@@ -59,6 +62,16 @@
 
 .read-more-wrapper {
   margin-top: auto;
+}
+
+.overlay-link {
+  @include cover-absolutely();
+  z-index: 1;
+  border-bottom: 0;
+  overflow: hidden;
+  text-indent: 200%;
+  white-space: nowrap;
+  visibility: visible;
 }
 
 .read-more {
