--- a/_sass/components/modules/_projects.scss
+++ b/_sass/components/modules/_projects.scss
@@ -73,7 +73,7 @@
     transition: box-shadow $transition-duration linear;
 
     &:hover {
-      box-shadow: 0 2px 4px 0 hsla(0,0%,68%,.32);
+      box-shadow: 0 1px 2px rgba(0, 0, 0, .07);
     }
   }
 
@@ -106,7 +106,8 @@
     z-index: 2;
     display: block;
 
-    @include padding($base-line-height / 2, $base-line-height / 4);
+    @include padding($base-line-height / 4, $base-line-height / 4);
+    margin-top: relative-size($base-line-height / 4);
 
     &:focus,
     &:hover {
