--- a/_sass/components/modules/_article.scss
+++ b/_sass/components/modules/_article.scss
@@ -26,9 +26,10 @@
       flex: 1 0 auto;
     }
 
-    transition: box-shadow $transition-duration linear;
+    transition: box-shadow $transition-duration linear, background $transition-duration linear;
 
     &:hover {
+      background: $color-background;
       box-shadow: 0 1px 2px rgba(0, 0, 0, .07);
     }
   }
