--- a/_sass/components/modules/_nav-log.scss
+++ b/_sass/components/modules/_nav-log.scss
@@ -9,6 +9,13 @@
 
   // Override and customize mixin for categories
   &--categories {
+    margin-left: -10px;
+    margin-right: -10px;
+
+    @include respond-to($breakpoint-medium) {
+      margin: 0 -15px;
+    }
+
     @include padding($base-line-height / 2, $base-line-height/ 2);
 
     li > a {
