Hide Twitter link visually

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -9,7 +9,7 @@
 
     <div class="l-actions l-center-align">
       <a href="/log/" class="btn btn-action ga-home-read-log">Read the log <span aria-hidden="true">→</span></a>
-      <a rel="me" class="ga-home-follow-twitter btn btn-secondary" href="https://twitter.com/akikoo">
+      <a rel="me" class="ga-home-follow-twitter btn btn-secondary is-visuallyhidden" href="https://twitter.com/akikoo">
         Follow @akikoo<span class="is-visuallyhidden">&nbsp;on Twitter</span>
       </a>
     </div>
