Adapt design, get rid of header background for now

--- a/_includes/categories-in-collection.html
+++ b/_includes/categories-in-collection.html
@@ -1,5 +1,5 @@
 <nav aria-labelledby="category-nav-heading">
-  <div class="l-background">
+  <div class="l-background-light">
     <div class="l-constrained">
       <h2 class="section-heading is-visuallyhidden" id="category-nav-heading">Categories</h2>
       <ul class="nav-log nav-log--categories l-row">
