--- a/_includes/navigation-log.html
+++ b/_includes/navigation-log.html
@@ -1,5 +1,5 @@
 <nav aria-label="Browse log">
-  <div class="l-background--light">
+  <div class="l-background-light">
     <div class="l-constrained">
       <ul class="nav-log nav-log--posts">
       {% if page.previous.url %}
