--- a/_includes/post-meta-in-single.html
+++ b/_includes/post-meta-in-single.html
@@ -7,7 +7,7 @@
     </p>
   </div>
 
-  <div class="l-background">
+  <div class="l-background-light">
     <div class="l-constrained">
       {% include categories-in-single.html %}
     </div>
