--- a/_sass/components/modules/_article.scss
+++ b/_sass/components/modules/_article.scss
@@ -58,7 +58,7 @@
   }
 
   // background: $color-main;
-  background: linear-gradient(45deg, #0ED42E, #00d4ff);
+  // background: linear-gradient(45deg, #0ED42E, #00d4ff);
 
   &--styleguide {
     background: none;
