--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -8,12 +8,12 @@ layout: default
     <div class="l-constrained">
       <h1 class="p-name entry-title">{{page.title}}</h1>
     </div>
-    {% if page.url != '/work/' and page.url != '/about/' and page.url != '/styleguide/' and page.url != '/offline/' %}
+    {% if page.url != '/work/' and page.url != '/about/' and page.url != '/styleguide/' and page.url != '/offline.html' %}
     {% include post-meta-in-single.html time=page.date %}
     {% endif %}
   </div>
   <div class="e-content e-content--single entry-content l-constrained">
-    {% if page.url != '/work/' and page.url != '/about/' and page.url != '/styleguide/' and page.url != '/offline/' %}
+    {% if page.url != '/work/' and page.url != '/about/' and page.url != '/styleguide/' and page.url != '/offline.html' %}
     <div class="l-row">
       <div class="l-cell {% if page.url != '/work/' %}l-cell-8{% endif %}">
         {{content}}
@@ -25,7 +25,7 @@ layout: default
   </div>
 </article>
 
-{% if page.url != '/work/' and page.url != '/about/' and page.url != '/styleguide/' and page.url != '/offline/' %}
+{% if page.url != '/work/' and page.url != '/about/' and page.url != '/styleguide/' and page.url != '/offline.html' %}
 {% include navigation-log.html %}
 {% endif %}
 
