--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <nav role="navigation" id="nav-main" aria-labelledby="main-nav">
   <h2 class="is-visuallyhidden" id="main-nav">Site links</h2>
-  <ul class="nav-main l-row">
-    <li class="nav-main__item nav-main__item--home l-cell">
+  <ul itemscope itemtype="http://www.schema.org/SiteNavigationElement" class="nav-main l-row">
+    <li itemprop="name" class="nav-main__item nav-main__item--home l-cell">
     {% if page.url == '/' %}
     <h1 class="masthead">
     {% else %}
@@ -20,12 +20,12 @@
 
     {% assign current = 'nav-main__item--current' %}
     {% for item in site.data.navigation %}
-    <li class="nav-main__item l-cell
+    <li itemprop="name" class="nav-main__item l-cell
     {% if page.pagetype == 'post' and item.name == 'Log' %}{{current}}
     {% elsif page.pagetype == 'category' and item.name == 'Log' %}{{current}}
     {% elsif page.url == item.link %}{{current}}
     {% endif %}">
-      <a class="nav-main__link ga-nav-main" aria-label="{{item.ariaLabel}}" href="{{item.link}}">{{item.name}}</a>
+      <a itemprop="url" class="nav-main__link ga-nav-main" aria-label="{{item.ariaLabel}}" href="{{item.link}}">{{item.name}}</a>
     </li>
     {% endfor %}
   </ul>
