--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -9,7 +9,7 @@
     {% endif %}
     <a class="logo" title="akikoo.org | the web home of Aki Kärkkäinen" href="/">
       <span class="logo__img"><img src="/assets/images/akikoo_logo.jpg" alt="Home" /></span>
-      <span class="logo__text"><span class="logo__name is-visuallyhidden">Aki Kärkkäinen</span><span class="logo__title is-visuallyhidden">Accessible UX/UI Developer</span></span>
+      <span class="logo__text"><span class="logo__name is-visuallyhidden">Aki Kärkkäinen</span> <span class="logo__title is-visuallyhidden"> Accessible UI Developer/Architect & Scrum Master</span></span>
     </a>
     {% if page.url != '/' %}
     </div>
