--- a/_sass/components/modules/_projects.scss
+++ b/_sass/components/modules/_projects.scss
@@ -27,14 +27,13 @@
   // Custom responsive grid
   &__item {
     flex: 0 0 100%;
-    padding: 8px 15px;
+    padding: 15px;
     display: flex;
   }
 
   @include respond-to($breakpoint-small) {
     &__item {
       flex: 0 0 50%;
-      padding: 15px;
     }
   }
 
@@ -73,7 +72,7 @@
     transition: box-shadow $transition-duration linear;
 
     &:hover {
-      box-shadow: 0 1px 2px rgba(0, 0, 0, .07);
+      box-shadow: 0 0 2px rgba(0, 0, 0, .07);
     }
   }
 
@@ -86,7 +85,6 @@
 
   // Image
   &__thumbnail {
-    border: 10px solid transparent;
     border-bottom: none;
   }
 
@@ -132,10 +130,11 @@
     padding: 10px;
     line-height: 1;
     clear: left; // Clear floated image
-    color: $color-text-light;
     letter-spacing: .02em;
+    background: $color-background;
+    margin-top: relative-size($base-line-height / 4);
     @include respond-to($breakpoint-small) {
-      padding: relative-size($base-line-height) 10px 10px;
+      margin-top: relative-size($base-line-height / 2);
     }
   }
 }
