--- a/_sass/common/_elements.scss
+++ b/_sass/common/_elements.scss
@@ -242,10 +242,14 @@ h3.p-name {
   // background: $color-highlight;
 
   .p-name__link {
-    padding: relative-size($base-line-height / 4) 0;
+    padding: 0;
     display: block;
     white-space: normal;
     color: $color-text-dark;
+
+    @include respond-to($breakpoint-medium) {
+      padding: relative-size($base-line-height / 4) 0;
+    }
 
     &:focus,
     &:hover,
