Adapt post navigation, again

--- a/_sass/components/modules/_nav-log.scss
+++ b/_sass/components/modules/_nav-log.scss
@@ -44,6 +44,10 @@
   // Override and customize mixin for posts navigation (prev/next)
   &--posts {
     margin: 0; // Override
+
+    li > a {
+      font-weight: $font-weight-regular; // Override
+    }
   }
 
   &--posts &__next {
