Adjust styles and copy

--- a/_includes/aside.html
+++ b/_includes/aside.html
@@ -4,7 +4,7 @@
 
     <div class="faq">
       <h3 class="section-heading is-hidden">Quick facts</h3>
-      <p class="h-card vcard"><span class="lead">Hi! I’m <span class="p-name fn">Aki<span class="is-visuallyhidden">&nbsp;Kärkkäinen</span></span>.</span> I’m a consulting <a href="/work/" class="p-role role ">UI Developer/Architect</a> with a strong twist of Agile methodologies, mostly <a href="https://www.scrum.org/user/405331">Scrum</a> and Kanban. I currently live in <span class="p-adr adr"><span class="p-locality locality">Copenhagen</span>, <span class="p-country-name country-name">Denmark</span></span>.</p>
+      <p class="h-card vcard"><span class="lead">Hi! I’m <span class="p-name fn">Aki<span class="is-visuallyhidden">&nbsp;Kärkkäinen</span></span> – </span> a consulting <a href="/work/" class="p-role role ">UI Developer/Architect</a> with a strong twist of Agile methodologies, mostly <a href="https://www.scrum.org/user/405331">Scrum</a> and Kanban. I currently live in <span class="p-adr adr"><span class="p-locality locality">Copenhagen</span>, <span class="p-country-name country-name">Denmark</span></span>.</p>
     </div>
 
     <div class="l-actions l-center-align">
