--- a/_sass/components/modules/_contentinfo.scss
+++ b/_sass/components/modules/_contentinfo.scss
@@ -3,9 +3,9 @@
    ========================================================================== */
 
 [role="contentinfo"] {
-  background: $color-white;
+  background: $color-background;
   padding: relative-size($base-line-height / 2) 0 0;
-  @include margin($base-line-height / 2, 0);
+  @include margin($base-line-height, 0);
 }
 
 // Contentinfo paragraph.
