--- a/_sass/components/modules/_projects.scss
+++ b/_sass/components/modules/_projects.scss
@@ -72,7 +72,7 @@
     transition: box-shadow $transition-duration linear;
 
     &:hover {
-      box-shadow: 0 0 2px rgba(0, 0, 0, .07);
+      box-shadow: 0 0 0 1px rgba(0, 0, 0, .05), 0 0 20px rgba(0, 0, 0, .05);
     }
   }
 
