--- a/_sass/components/modules/_post-meta.scss
+++ b/_sass/components/modules/_post-meta.scss
@@ -4,7 +4,7 @@
 
 .entry-meta {
   margin: 6px 0;
-  font-weight: $font-weight-bold;
+  font-weight: $font-weight-regular;
   color: $color-text-light;
 
   @include respond-to($breakpoint-medium) {
