--- a/_sass/components/modules/_nav-log.scss
+++ b/_sass/components/modules/_nav-log.scss
@@ -19,6 +19,7 @@
 
     li > a {
       text-transform: uppercase;
+      font-weight: $font-weight-regular; // Override
       @include size-and-leading(16, $base-line-height);
       padding: 4px 10px;
 
