--- a/_sass/components/modules/_projects.scss
+++ b/_sass/components/modules/_projects.scss
@@ -63,10 +63,19 @@
       visibility: visible;
     }
 
+    .projects__thumbnail {
+      transform: translate3d(0, 0, 0);
+      transition: transform $transition-duration linear;
+    }
+
     transition: box-shadow $transition-duration linear;
 
     &:hover {
       box-shadow: 0 0 0 1px rgba(0, 0, 0, .05), 0 0 20px rgba(0, 0, 0, .05);
+
+      .projects__thumbnail {
+        transform: translate3d(0, -4px, 0);
+      }
     }
   }
 
@@ -74,6 +83,7 @@
   &__description {
     @include respond-to($breakpoint-small) {
       flex: 1 0 auto;
+      overflow: hidden;
     }
   }
 
@@ -84,7 +94,7 @@
 
   // Project title
   &__heading {
-    margin: 0 10px;
+    margin: 0 15px;
     text-transform: uppercase;
 
     @include respond-to($breakpoint-small, max) {
@@ -111,6 +121,7 @@
       display: block;
       height: 3px;
       transition: background $transition-duration linear;
+      line-height: 0;
     }
   }
 
@@ -125,7 +136,7 @@
 
   // Project description
   &__text {
-    margin: 0 10px; // Override
+    margin: 0 15px; // Override
 
     @include respond-to($breakpoint-small, max) {
       overflow: hidden; // Make sure text doesn't wrap around the image
@@ -135,7 +146,7 @@
   &__year {
     font-size: relative-size(16);
     display: block;
-    padding: 10px;
+    padding: 15px;
     line-height: 1;
     clear: left; // Clear floated image
     letter-spacing: .02em;
