--- a/_sass/components/modules/_post-meta.scss
+++ b/_sass/components/modules/_post-meta.scss
@@ -5,14 +5,17 @@
 .entry-meta {
   margin: 0 0 relative-size(($base-line-height / 2) + 4);
   font-weight: $font-weight-regular;
-  color: $color-text-light;
 
   @include respond-to($breakpoint-medium) {
     @include size-and-leading(18);
   }
 
   &--single {
-
+    margin: relative-size(($base-line-height / 2)) 0 0;
+    @include respond-to($breakpoint-medium) {
+      font-size: relative-size(30);
+      margin: relative-size(($base-line-height)) 0 0;
+    }
   }
 }
 
