--- a/_includes/post-meta-in-single.html
+++ b/_includes/post-meta-in-single.html
@@ -2,8 +2,8 @@
   <div class="l-constrained">
     <p class="meta entry-meta entry-meta--single">
       <time datetime="{{include.time|date_to_xmlschema}}" class="dt-published published">{{include.time| date: '%-d %B, %Y'}}</time>
-      <span class="middot" aria-hidden="true">&middot;</span>
-      <span class="fn p-author author h-card"><span class="i-user is-hidden" aria-hidden="true"></span> Aki Kärkkäinen</span>
+      <span class="middot is-visuallyhidden" aria-hidden="true">&middot;</span>
+      <span class="fn p-author author h-card is-visuallyhidden"><span class="i-user is-hidden" aria-hidden="true"></span> Aki Kärkkäinen</span>
     </p>
   </div>
 
