--- a/_sass/_settings.scss
+++ b/_sass/_settings.scss
@@ -79,11 +79,9 @@ $color-link-social-facebook : #3b5998;
 $color-link-social-github   : #171515;
 $color-link-social-flickr   : #ff0084;
 $color-link-social-lastfm   : #c3000d;
-$color-link-social-tumblr   : #34526f;
 $color-link-social-twitter  : #00acee;
-$color-link-social-feed     : #ee802f;
-$color-link-social-googleplus: #dd4b39;
-
+$color-link-social-goodreads: #630;
+$color-link-social-rss      : #ee802f;
 
 // ========================================================================== //
 // =Box shadow settings
