Adjust nav posts layout

--- a/_sass/components/modules/_nav-log.scss
+++ b/_sass/components/modules/_nav-log.scss
@@ -48,9 +48,7 @@
     margin: 0; // Override
   }
 
-  &--posts &__next {
-    float: right;
-  }
+  &--posts &__next {}
 
   &--posts &__pagination {
     @include size-and-leading(16, $base-line-height);
