--- a/_sass/components/modules/_article.scss
+++ b/_sass/components/modules/_article.scss
@@ -140,3 +140,14 @@
     }
   }
 }
+
+// Intro text (About, Work)
+.text-intro {
+  @include respond-to($breakpoint-medium) {
+    @include size-and-leading(24, 36);
+  }
+
+  @include respond-to($breakpoint-large) {
+    @include size-and-leading(30, 50);
+  }
+}
