Add a note on the Log page

--- a/_layouts/collection.html
+++ b/_layouts/collection.html
@@ -16,6 +16,15 @@ layout: default
   </div>
 
   <div class="l-constrained">
+
+    {% if page.url == '/log/' or page.pagetype == 'category' %}
+    <div class="l-row">
+      <div class="l-cell l-cell-8">
+        <p class="text-intro">Short notes and articles I've written, and links to interesting pieces by others.</p>
+      </div>
+    </div>
+    {% endif %}
+
     {% include categories-in-collection.html %}
     <div class="articles">
     {% if page.pagetype == 'category' %}
