--- a/_sass/components/modules/_nav-log.scss
+++ b/_sass/components/modules/_nav-log.scss
@@ -11,6 +11,7 @@
     margin-left: -10px;
     margin-right: -10px;
     margin-bottom: 0; // Override
+    @include padding(0, $base-line-height / 2);
 
     @include respond-to($breakpoint-medium) {
       margin: 0 -15px;
