Add Clients section on the homepage

--- a/_sass/components/_module.scss
+++ b/_sass/components/_module.scss
@@ -37,6 +37,7 @@
 @import "modules/article";
 @import "modules/books";
 @import "modules/buttons";
+@import "modules/clients";
 @import "modules/contentinfo";
 @import "modules/fonts";
 @import "modules/forms";
